<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:title="Receive"
        app:titleTextColor="@color/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/wallet_info"
        android:layout_centerHorizontal="true">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_qr_code"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_above="@id/qr_code"/>

        <ImageView
            android:id="@+id/qr_code"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/ic_qr_code"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/qr_code"
            android:layout_centerInParent="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/wallet_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/_1ffmbhfnpazjkfvyi1oktjjjusn455paph"
            android:maxLines="2"
            android:textAlignment="center"
            android:ellipsize="end"
            android:layout_below="@id/qr_code"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/wallet_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/wallet_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/ic_account_balance_wallet_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/wallet_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/amount_coin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0_00010000_b"
            android:textColor="@color/colorTextLight"
            android:textSize="16sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@id/wallet_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>