<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bit"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/wallet"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintBottom_toTopOf="@id/buttons">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_cash_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_00010000_b"
            android:textSize="24sp"
            app:autoSizeMinTextSize="16sp"
            app:autoSizeMaxTextSize="24sp"
            android:textColor="@color/colorText"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_below="@id/txt_cash_coin"
            android:layout_centerHorizontal="true"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_1ffmbhfnpazjkfvyi1oktjjjusn455paph"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextLight"
            android:layout_below="@id/address"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@color/colorPrimary"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_file_upload_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_receive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_receive"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:background="@color/colorPrimary"
            android:text="@string/receive"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="20dp"
            app:icon="@drawable/ic_file_download_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_send"
            app:layout_constraintTop_toTopOf="parent"
            app:rippleColor="@android:color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <com.google.android.material.appbar.AppBarLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:elevation="0dp"-->
<!--        android:elevation="0dp">-->

<!--        <com.google.android.material.appbar.CollapsingToolbarLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:titleEnabled="false"-->
<!--            android:background="@android:color/white"-->
<!--            app:elevation="0dp"-->
<!--            android:elevation="0dp">-->



<!--        </com.google.android.material.appbar.CollapsingToolbarLayout>-->

<!--    </com.google.android.material.appbar.AppBarLayout>-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recycler_view_transactions"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--        tools:itemCount="20"-->
<!--        tools:listitem="@layout/cardview_transaction"-->
<!--        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>