<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bit"
                android:textSize="32sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@android:color/black"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/wallet"
                android:textSize="32sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edittext_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:hintEnabled="true"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeWidth="2dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomEnd="10dp"
            app:startIconDrawable="@drawable/ic_account_balance_wallet_black_24dp"
            app:startIconTint="@android:color/darker_gray"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="c159e501a33eda05e2493e6f5bba20cd5276e3718792af626430ce0e3cfa68e3"
                android:textSize="14sp"
                android:maxLines="1"
                android:maxLength="64"
                android:hint="@string/wallet_address"
                android:textColorHint="@color/colorTextLight"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_enter_wallet"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter_wallet"
            android:textSize="18sp"
            app:icon="@drawable/ic_login_square_arrow_button_outline"
            app:iconSize="30dp"
            app:iconGravity="start"
            app:iconPadding="20dp"
            app:cornerRadius="10dp"
            app:rippleColor="@android:color/background_light"/>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:weightSum="5">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorTextLight"
                android:layout_weight="2"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="1dp"
                android:text="@string/or"
                android:textColor="@color/colorTextLight"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorTextLight"
                android:layout_weight="2"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_create_wallet"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/create_new_wallet"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:icon="@drawable/ic_digital_wallet"
            app:iconSize="35dp"
            app:iconGravity="start"
            app:cornerRadius="10dp"
            app:strokeColor="@color/colorPrimary"
            app:rippleColor="@color/colorPrimary"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
