<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    android:clickable="true"
    android:focusable="true"
    app:rippleColor="@color/colorPrimary"
    app:cardBackgroundColor="@color/cardBackground"
    app:cardCornerRadius="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_trans_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/img_trans_icon">

            <TextView
                android:id="@+id/txt_trans_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/received_from_1516163131561"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_trans_date"
                app:layout_constraintEnd_toStartOf="@id/txt_trans_amount"/>

            <TextView
                android:id="@+id/txt_trans_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/feb_16_2019"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/colorTextLight"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/txt_trans_desc"
                app:layout_constraintTop_toBottomOf="@id/txt_trans_desc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/txt_trans_amount_coin"/>

            <TextView
                android:id="@+id/txt_trans_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_001_b"
                android:textAlignment="viewEnd"
                android:maxLines="1"
                android:maxWidth="100dp"
                android:ellipsize="end"
                android:textColor="@color/colorPrice"
                android:textSize="14sp"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="@id/txt_trans_desc"
                app:layout_constraintStart_toEndOf="@id/txt_trans_desc"
                app:layout_constraintBaseline_toBaselineOf="@id/txt_trans_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/txt_trans_amount_coin"/>

            <TextView
                android:id="@+id/txt_trans_amount_coin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/_0_02_usd"
                android:textAlignment="textEnd"
                android:maxLines="1"
                android:ellipsize="end"
                android:textColor="@color/colorTextLight"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/txt_trans_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_trans_amount"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>